--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+**NO LONGER IN DEVELOPMENT**
+PixelPainter2 is now the most up-to date version, consisting of a single HTML file for the user to run in their browser of choice.
+
+
 This tool converts any image you choose into a image mimicking Minecraft's pixelated painting style. This is intended for use with plugins that allow players to import images to be displayed as maps.
